<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/s_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/login_page_header"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/login_page_subtitle"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_user_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bordered_textfield"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/username_textfield"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/login_pass_field"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bordered_textfield"
            android:fontFamily="@font/gilroy_regular"
            android:inputType="textPassword"
            android:hint="@string/password_textfield"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/login_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forget_pass_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#185BFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/didnt_you_have_acc"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/gilroy_regular"
                android:text="@string/register_text"
                android:textColor="#185BFF"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>