<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:src="@drawable/s_logo"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_title"
            android:fontFamily="@font/gilroy_bold"
            android:textSize="24sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_subtitle"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:hint="@string/register_username"
            android:paddingStart="20dp"
            android:fontFamily="@font/gilroy_regular"
            android:background="@drawable/bordered_textfield"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/register_password"
            android:paddingStart="20dp"
            android:fontFamily="@font/gilroy_regular"
            android:background="@drawable/bordered_textfield"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/register_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/register_password_repeat"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:fontFamily="@font/gilroy_regular"
            android:background="@drawable/bordered_textfield"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/register_payercode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/register_payercode"
            android:paddingStart="20dp"
            android:fontFamily="@font/gilroy_regular"
            android:background="@drawable/bordered_textfield"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/register_htf_payercode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_payercode_htf"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="#185BFF"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_btn"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>



    </LinearLayout>

</RelativeLayout>