<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.fragments.payercode.SPayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payercode_text"
            android:fontFamily="@font/gilroy_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/white_textfield"
            android:elevation="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/payercode_example"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_button"
            android:text="@string/add_btn"
            android:fontFamily="@font/gilroy_regular"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>